--- a/ASP.NET Core Advanced/17. Project Defense/HotelApp/HotelApp.Web/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core Advanced/17. Project Defense/HotelApp/HotelApp.Web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Room" asp-action="Index">Rooms</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Booking" asp-action="Index">Bookings</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
