Added Aditional Functionality

--- a/ASP.NET Core Advanced/17. Project Defense/HotelApp/HotelApp.Web/Views/Booking/Index.cshtml
+++ b/ASP.NET Core Advanced/17. Project Defense/HotelApp/HotelApp.Web/Views/Booking/Index.cshtml
@@ -5,8 +5,8 @@
 @{
     ViewData["Title"] = "All Bookings";
 }
-
 <h1>Bookings</h1>
+<a asp-action="Create" class="btn btn-success mb-4">Add New Booking</a>
 
 <table class="table table-striped">
     <thead>
